feat: tiptap editor

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,15 @@
     -moz-osx-font-smoothing: grayscale;
 } */
 
+html {
+    box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, Caveat, 'Segoe UI', Roboto, Helvetica, Arial,
         sans-serif;
@@ -21,7 +30,6 @@ body {
     max-width: 38rem;
     padding: 2rem;
     height: 100vh;
-    box-sizing: border-box;
 }
 
 #root {
@@ -32,6 +40,7 @@ input.middle:focus {
     outline-width: 0;
 }
 
+.tiptap:focus,
 input:focus,
 select:focus,
 textarea:focus,
@@ -43,6 +52,15 @@ input {
     width: 100%;
 }
 
-textarea {
+/* textarea {
     overflow: hidden;
+} */
+
+.tiptap-container {
+    width: 100%;
+}
+
+.tiptap-container > * {
+    /* margin: 1rem;
+    width: 100%; */
 }
