feat: save & restore notes

--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,11 @@ input {
     /* margin: 1rem;
     width: 100%; */
 }
+
+.tiptap p.is-editor-empty:first-child::before {
+    color: #adb5bd;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+}
